# review-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SUPPORT.md  pyproject.toml  review-driven.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
src/review_cli/: __init__.py
src/specify_cli/: __init__.py
templates/: checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
templates/commands/: analyze.md  checklist.md  clarify.md  implement.md  review.md  specify.md  tasks.md
