[project]
name = "review-cli"
version = "0.0.4"
description = "Review CLI, part of GitHub Review Kit. A tool to bootstrap your projects for Review-Driven Development (RDD)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
review = "review_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/review_cli"]

